Styling for spacing issues on tincture buttons

--- a/src/components/TinctureChoices/_TinctureChoices.scss
+++ b/src/components/TinctureChoices/_TinctureChoices.scss
@@ -75,6 +75,20 @@
   color: white;
 }
 
+#quantity-dropdown {
+  border: 1px solid $viobin;
+  border-radius: 5px;
+  height: 60px;
+  width: 200px;
+  font-size: 1.3em;
+  font-weight: 200;
+  color: $viobin;
+  padding: 0px 30px;
+  // -webkit-appearance: none;
+  // -moz-appearance: none;
+  // -webkit-border-radius: 0px;
+  // background: url('../../up-and-down.svg')  no-repeat;
+}
 
 
 .tincture-carrier {
@@ -105,6 +119,7 @@
     margin: auto 5px;
     border: none;
     width: 140px;
+    height: 160px;
   }
 
   .tincture-flavor-button-icons {
@@ -116,6 +131,7 @@
 
   button {
     margin: auto 5px;
+    height: 160px;
   }
 }
 
@@ -128,6 +144,7 @@
   button {
     margin: auto 5px;
     border: none;
+    height: 160px;
   }
 
   .spectrum-button-logos {
@@ -150,6 +167,7 @@
     border: 1px solid #FFFFFF;
     margin: 0px 15px;
     height: auto;
+    height: 120px;
   }
 
   button:hover {
